# qaguru_advanced

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: test.yml
app/: database.py  main.py  models.py
app/database/: engine.py  users.py
app/models/: app_status.py  user.py
app/routes/: status.py  users.py
data/: strings.py  users.json
tests/: conftest.py  test_my_service.py  test_requestin.py
tests/my_service_tests/: __init__.py  conftest.py  test_create_user.py  test_delete_user.py  test_get_user_by_id.py  test_get_users_list.py  test_patch_user.py  test_put_user.py  test_status.py
tests/src/: allure_decorators.py  assert_helpers.py  data_generators.py  files_helper.py  strings.py
tests/src/api_client/: app_status.py  base_client.py  users.py
