[project]
name = "qaguru-advanced"
version = "0.1.0"
description = "Домашние задания на курс https://qa.guru/python-advanced"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "pytest>=8.4.1",
    "pytest-xdist>=3.8.0",
    "requests>=2.32.4",
    "ruff>=0.12.7",
    "uvicorn>=0.35.0",
    "curlify2>=2.0.0",
    "allure-pytest>=2.15.0",
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
    "pre-commit>=4.2.0",
]
